fix: words overflowing really this time

--- a/public/styles.css
+++ b/public/styles.css
@@ -58,13 +58,18 @@ form {
     flex-direction: column;
     align-items: center;
     max-width: 50%;
-    line-break: anywhere;
+    overflow-wrap: break-word;
     flex: 1;
+}
+
+.list>ul {
+    max-width: 100%;
 }
 
 .doubleList {
     display: flex;
     justify-content: center;
+    max-width: 100%;
     gap: 40px;
 }
 
